--- a/index.html
+++ b/index.html
@@ -2,85 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gray Search Group</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
     body {
-      font-family: 'Inter', sans-serif;
-      background-color: #f9f9f9;
-      color: #1e1e1e;
-      line-height: 1.7;
-    }
-    header {
-      background-color: #0a0a0a;
-      color: white;
-      padding: 80px 20px;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2.8rem;
-      font-weight: 600;
-      letter-spacing: 1px;
-    }
-    header p {
-      font-size: 1.2rem;
-      opacity: 0.8;
-      margin-top: 10px;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      background-color: #141414;
-      padding: 12px 0;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 100;
-    }
-    nav a {
-      color: #ddd;
-      margin: 0 20px;
-      text-decoration: none;
-      font-weight: 600;
-      text-transform: uppercase;
-      font-size: 0.9rem;
-    }
-    nav a:hover {
-      color: #b4b4b4;
-    }
-    section {
-      padding: 80px 24px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 10px;
-      color: #222;
-    }
-    section p {
-      font-size: 1rem;
-      color: #444;
-    }
-    section:nth-of-type(even) {
+      margin: 0;
+      font-family: 'Lato', sans-serif;
+      color: #1a1a1a;
       background-color: #ffffff;
     }
-    section:nth-of-type(odd) {
-      background-color: #f0f0f0;
+    header {
+      background-color: #0e1a2b;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    h1 {
+      font-family: 'Playfair Display', serif;
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    h2 {
+      font-family: 'Playfair Display', serif;
+      color: #0e1a2b;
+      font-size: 1.75rem;
+    }
+    section {
+      padding: 2rem 1.5rem;
+      max-width: 900px;
+      margin: auto;
     }
     footer {
-      background-color: #0a0a0a;
-      color: white;
+      background-color: #f1f1f1;
+      padding: 1rem;
       text-align: center;
-      padding: 30px 20px;
       font-size: 0.9rem;
     }
   </style>
@@ -88,51 +44,42 @@
 <body>
   <header>
     <h1>Gray Search Group</h1>
-    <p>Elite Talent Acquisition for Physicians and Veterinarians</p>
+    <p>Elite Physician & Specialist Recruiting</p>
   </header>
 
-  <nav>
-    <a href="#about">About Us</a>
-    <a href="#press">Press</a>
-    <a href="#physicians">Physicians</a>
-    <a href="#veterinarians">Veterinarians</a>
-    <a href="#team">Team</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <section id="about">
+  <section>
     <h2>About Us</h2>
-    <p>[Placeholder content]</p>
+    <p>Gray Search Group specializes in placing top-tier surgeons, transplant specialists, and physicians at the most respected healthcare institutions worldwide. Our network is built on trust, precision, and discretion.</p>
   </section>
 
-  <section id="press">
+  <section>
+    <h2>For Physicians</h2>
+    <p>We place world-class specialists with roles that match their talent, values, and long-term goals.</p>
+  </section>
+
+  <section>
+    <h2>For Veterinarians</h2>
+    <p>We help leading veterinary hospitals and clinics find exceptional professionals to grow their practices.</p>
+  </section>
+
+  <section>
+    <h2>Our Team</h2>
+    <p>Our recruiters have decades of experience across medicine, operations, and talent management. We bring insight, speed, and precision to every search.</p>
+  </section>
+
+  <section>
     <h2>Press</h2>
-    <p>[Placeholder content]</p>
+    <p>Our firm and placements have been featured in major healthcare publications and journals. <i>(More to come)</i></p>
   </section>
 
-  <section id="physicians">
-    <h2>Physicians</h2>
-    <p>[Placeholder content]</p>
-  </section>
-
-  <section id="veterinarians">
-    <h2>Veterinarians</h2>
-    <p>[Placeholder content]</p>
-  </section>
-
-  <section id="team">
-    <h2>Team</h2>
-    <p>[Placeholder content]</p>
-  </section>
-
-  <section id="contact">
+  <section>
     <h2>Contact</h2>
-    <p>[Placeholder content]</p>
+    <p>Email: info@graysearchgroup.com</p>
+    <p>Location: New York, NY</p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Gray Search Group. All rights reserved.</p>
+    &copy; 2025 Gray Search Group. All rights reserved.
   </footer>
 </body>
 </html>
-
