--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Gray Search Group</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
@@ -16,65 +17,77 @@
     }
 
     header {
-      background-color: #f8f9fa;
-      padding: 20px 40px;
-      border-bottom: 1px solid #eaeaea;
+      background-color: #0a0a0a;
+      padding: 30px 40px;
+      text-align: center;
+      color: white;
+    }
+
+    header h1 {
+      font-weight: 600;
+      font-size: 2.8rem;
+      margin: 0;
     }
 
     nav {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      justify-content: center;
+      background-color: #141414;
+      padding: 12px 0;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
 
-    .logo {
-      font-weight: 600;
-      font-size: 24px;
-      color: #333;
-    }
-
-    .nav-links a {
-      margin-left: 20px;
+    nav a {
+      color: #ddd;
+      margin: 0 20px;
       text-decoration: none;
-      color: #333;
-      font-weight: 500;
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: 0.9rem;
+      transition: color 0.3s ease;
     }
 
-    .section {
-      padding: 60px 40px;
-      border-bottom: 1px solid #eaeaea;
+    nav a:hover {
+      color: #b4b4b4;
     }
 
-    .section h2 {
-      font-size: 28px;
-      margin-bottom: 20px;
+    section {
+      max-width: 900px;
+      margin: 50px auto;
+      padding: 0 20px;
     }
 
-    .section p {
-      max-width: 700px;
+    section h2 {
+      font-size: 2rem;
+      margin-bottom: 15px;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 10px;
+      color: #222;
+    }
+
+    section p {
+      font-size: 1rem;
+      color: #444;
     }
 
     footer {
-      background-color: #f8f9fa;
+      background-color: #0a0a0a;
+      color: white;
       text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #666;
+      padding: 25px 20px;
+      font-size: 0.9rem;
+      margin-top: 60px;
     }
 
     @media (max-width: 600px) {
       nav {
-        flex-direction: column;
-        align-items: flex-start;
+        flex-wrap: wrap;
       }
-
-      .nav-links {
-        margin-top: 10px;
-      }
-
-      .nav-links a {
-        margin-left: 0;
-        margin-right: 15px;
+      nav a {
+        margin: 10px 12px;
       }
     }
   </style>
@@ -82,47 +95,47 @@
 <body>
 
   <header>
-    <nav>
-      <div class="logo">Gray Search Group</div>
-      <div class="nav-links">
-        <a href="#about">About Us</a>
-        <a href="#press">Press</a>
-        <a href="#physicians">Physicians</a>
-        <a href="#veterinarians">Veterinarians</a>
-        <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
-      </div>
-    </nav>
+    <h1>Gray Search Group</h1>
+    <p>Elite Talent Acquisition for Physicians and Veterinarians</p>
   </header>
 
-  <section class="section" id="about">
+  <nav>
+    <a href="#about">About Us</a>
+    <a href="#press">Press</a>
+    <a href="#physicians">Physicians</a>
+    <a href="#veterinarians">Veterinarians</a>
+    <a href="#team">Team</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
     <h2>About Us</h2>
     <p>Gray Search Group is a premier recruiting firm specializing in high-level placements for doctors, surgeons, and specialists. We are committed to excellence and discretion.</p>
   </section>
 
-  <section class="section" id="press">
+  <section id="press">
     <h2>Press</h2>
     <p>Coming soon — Gray Search Group featured in leading medical and business publications.</p>
   </section>
 
-  <section class="section" id="physicians">
+  <section id="physicians">
     <h2>Physicians</h2>
     <p>We connect top-tier physicians with institutions that align with their goals and values. Our placement services are discreet, personalized, and highly effective.</p>
   </section>
 
-  <section class="section" id="veterinarians">
+  <section id="veterinarians">
     <h2>Veterinarians</h2>
     <p>Gray Search Group also specializes in veterinary placements, connecting professionals with cutting-edge clinics and hospitals nationwide.</p>
   </section>
 
-  <section class="section" id="team">
+  <section id="team">
     <h2>Team</h2>
     <p>Our team is composed of experienced healthcare recruiters and industry specialists. More coming soon.</p>
   </section>
 
-  <section class="section" id="contact">
+  <section id="contact">
     <h2>Contact</h2>
-    <p>Email: contact@graysearchgroup.com<br>Phone: (123) 456-7890<br>More detailed contact form coming soon.</p>
+    <p>Email: contact@graysearchgroup.com<br />Phone: (123) 456-7890</p>
   </section>
 
   <footer>
