--- a/index.html
+++ b/index.html
@@ -2,101 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gray Search Group</title>
-  <!-- Load Google Fonts here with <link>, NOT @import -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: 'Inter', sans-serif;
       margin: 0;
-      padding: 0;
-      background-color: #ffffff;
-      color: #1a1a1a;
-      line-height: 1.6;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      color: #222;
+      background-color: #f8f9fa;
     }
 
     header {
-      background-color: #0a0a0a;
-      padding: 30px 40px;
-      text-align: center;
+      background-color: #0c2340;
       color: white;
+      padding: 2rem;
+      text-align: center;
     }
 
     header h1 {
-      font-weight: 600;
-      font-size: 2.8rem;
       margin: 0;
+      font-size: 2.5rem;
     }
 
     nav {
-      display: flex;
-      justify-content: center;
-      background-color: #141414;
-      padding: 12px 0;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      position: sticky;
-      top: 0;
-      z-index: 100;
+      background-color: #e9ecef;
+      padding: 1rem;
+      text-align: center;
     }
 
     nav a {
-      color: #ddd;
-      margin: 0 20px;
+      margin: 0 1rem;
+      color: #0c2340;
       text-decoration: none;
-      font-weight: 600;
-      text-transform: uppercase;
-      font-size: 0.9rem;
-      transition: color 0.3s ease;
+      font-weight: bold;
     }
 
     nav a:hover {
-      color: #b4b4b4;
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 2rem;
+      max-width: 800px;
+      margin: auto;
     }
 
     section {
-      max-width: 900px;
-      margin: 50px auto;
-      padding: 0 20px;
-    }
-
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 15px;
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 10px;
-      color: #222;
-    }
-
-    section p {
-      font-size: 1rem;
-      color: #444;
+      margin-bottom: 2rem;
     }
 
     footer {
-      background-color: #0a0a0a;
+      background-color: #0c2340;
       color: white;
       text-align: center;
-      padding: 25px 20px;
-      font-size: 0.9rem;
-      margin-top: 60px;
-    }
-
-    @media (max-width: 600px) {
-      nav {
-        flex-wrap: wrap;
-      }
-      nav a {
-        margin: 10px 12px;
-      }
+      padding: 1rem;
+      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>Gray Search Group</h1>
-    <p>Elite Talent Acquisition for Physicians and Veterinarians</p>
+    <p>Elite Physician & Specialist Recruiting</p>
   </header>
 
   <nav>
@@ -108,39 +75,40 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Gray Search Group is a premier recruiting firm specializing in high-level placements for doctors, surgeons, and specialists. We are committed to excellence and discretion.</p>
-  </section>
+  <main>
+    <section id="about">
+      <h2>About Us</h2>
+      <p>Gray Search Group is an elite healthcare recruiting firm specializing in placing high-level doctors and specialists in surgery, organ transplant, and other critical roles.</p>
+    </section>
 
-  <section id="press">
-    <h2>Press</h2>
-    <p>Coming soon — Gray Search Group featured in leading medical and business publications.</p>
-  </section>
+    <section id="press">
+      <h2>Press</h2>
+      <p>Our work has been featured in top healthcare publications. Coming soon.</p>
+    </section>
 
-  <section id="physicians">
-    <h2>Physicians</h2>
-    <p>We connect top-tier physicians with institutions that align with their goals and values. Our placement services are discreet, personalized, and highly effective.</p>
-  </section>
+    <section id="physicians">
+      <h2>Physicians</h2>
+      <p>We recruit and place board-certified physicians across all major disciplines with a focus on surgical excellence.</p>
+    </section>
 
-  <section id="veterinarians">
-    <h2>Veterinarians</h2>
-    <p>Gray Search Group also specializes in veterinary placements, connecting professionals with cutting-edge clinics and hospitals nationwide.</p>
-  </section>
+    <section id="veterinarians">
+      <h2>Veterinarians</h2>
+      <p>Our network extends into veterinary medicine, placing top-tier vets in cutting-edge animal hospitals and research facilities.</p>
+    </section>
 
-  <section id="team">
-    <h2>Team</h2>
-    <p>Our team is composed of experienced healthcare recruiters and industry specialists. More coming soon.</p>
-  </section>
+    <section id="team">
+      <h2>Team</h2>
+      <p>Our team is composed of industry veterans, clinical advisors, and world-class recruiters. Bios coming soon.</p>
+    </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: contact@graysearchgroup.com<br />Phone: (123) 456-7890</p>
-  </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email us at <a href="mailto:info@graysearchgroup.com">info@graysearchgroup.com</a></p>
+    </section>
+  </main>
 
   <footer>
-    &copy; 2025 Gray Search Group. All rights reserved.
+    <p>&copy; 2025 Gray Search Group. All rights reserved.</p>
   </footer>
-
 </body>
 </html>
